<resources>
    <string name="app_name">TrafficController</string>
    <string name="logo_name">GET A WAY</string>

    <!--buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">GET STARTED</string>

    <!--descriptions-->
    <string name="first_slide_decs">All you need to know your Real-time Location</string>
    <string name="second_slide_desc">Alert messages due to Emergency</string>
    <string name="third_slide_desc">Notification to All Users</string>
    <string name="fourth_slide_desc">Suggestion about Traffic</string>

    <!--titles-->
    <string name="first_slide_title">Location</string>
    <string name="second_slide_title">Alert</string>
    <string name="third_slide_title">Notification</string>
    <string name="fourth_slide_title">Suggestion</string>

    <!--catogories-->
    <string name="location">LOCATE</string>
    <string name="alert">ALERT</string>
    <string name="notify">NOTIFICATION</string>
    <string name="suggest">SUGGESTION</string>

    <!--title and Description-->
    <string name="search_txt">Search...</string>
</resources>