<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/coming_soon"
            android:text="@string/logo_name"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="25dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/app_name"
            android:background="@color/white"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="8dp">

            <TextView
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/search_txt" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/search"/>



        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card_1"
                android:elevation="8dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:src="@drawable/location_on"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card_1"
                android:elevation="8dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:src="@drawable/alert"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_1"
                android:elevation="8dp">

                <ImageView
                    android:layout_width="1600dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/notifications_active" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_1"
                android:elevation="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:src="@drawable/suggest" />
            </RelativeLayout>

            <TextView
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/suggest"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>